# bbexample1

./: .gitignore  README.md  bbexample.cpp  bbexample1_git.bb  bbfunction1.c  bbfunction10.c  bbfunction2.c  bbfunction3.c  bbfunction4.c  bbfunction5.c  bbfunction6.c  bbfunction7.c  bbfunction8.c  bbfunction9.c  meson.build
inc/: bbfunction1.hpp  bbfunction10.hpp  bbfunction2.hpp  bbfunction3.hpp  bbfunction4.hpp  bbfunction5.hpp  bbfunction6.hpp  bbfunction7.hpp  bbfunction8.hpp  bbfunction9.hpp
